--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,36 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>LeadManager</display-name>
+  
   <welcome-file-list>
-    <welcome-file>login.jsp</welcome-file>
+    <welcome-file>/dashboard.jsp</welcome-file>
   </welcome-file-list>
-
-		<servlet>
-		    <servlet-name>dashboardPage</servlet-name>
-		    <jsp-file>/dashboard.jsp</jsp-file>
-		</servlet>
-		<servlet-mapping>
-		    <servlet-name>dashboardPage</servlet-name>
-		    <url-pattern>/dashboard</url-pattern>
-		</servlet-mapping>
   
-  
-		<servlet>
-		    <servlet-name>bdDetailsPage</servlet-name>
-		    <jsp-file>/bdDetails.jsp</jsp-file>
-		</servlet>
-		<servlet-mapping>
-		    <servlet-name>bdDetailsPage</servlet-name>
-		    <url-pattern>/bddetails</url-pattern>
-		</servlet-mapping>
-
-		<servlet>
-		    <servlet-name>resourcesPage</servlet-name>
-		    <jsp-file>/resources.jsp</jsp-file>
-		</servlet>
-		<servlet-mapping>
-		    <servlet-name>resourcesPage</servlet-name>
-		    <url-pattern>/resources</url-pattern>
-		</servlet-mapping>
-  
+  <servlet>
+    <servlet-name>dashboardPage</servlet-name>
+    <jsp-file>/dashboard.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>dashboardPage</servlet-name>
+    <url-pattern>/dashboard</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>bdDetailsPage</servlet-name>
+    <jsp-file>/bdDetails.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>bdDetailsPage</servlet-name>
+    <url-pattern>/bddetails</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>resourcesPage</servlet-name>
+    <jsp-file>/resources.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>resourcesPage</servlet-name>
+    <url-pattern>/resources</url-pattern>
+  </servlet-mapping>
 </web-app>
